tests/semantic/valid/struct_fields/read_and_assign.src
struct Point {
  int x;
  int y;
}

fn main() -> int {
  Point p;
  p.x = 1;
  p.y = 2;
  return p.x + p.y;
}

