tests/semantic/invalid/scope_errors/use_before_init.src
fn main() -> int {
  int x;
  int y = x;
  return y;
}
